# WebAssembly-WebGL-Glitter

./: .gitmodules  CMakeLists.txt  Readme.md
Glitter/Headers/: glitter.hpp
Glitter/Resources/: scene.gltf  shader.frag  shader.vert
Glitter/Sources/: camera.cpp  camera.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp
